# jupyter-book-to-htmlbook

./: .coveragerc  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: workflow.yaml
jupyter_book_to_htmlbook/: admonition_processing.py  atlas.py  chapter_processing.py  code_processing.py  figure_processing.py  file_processing.py  footnote_processing.py  jupyter_book_to_htmlbook.py  main.py  math_processing.py  reference_processing.py  text_processing.py  toc_processing.py  xref_processing.py
sphinx-htmlbook-theme/: LICENSE  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
sphinx-htmlbook-theme/src/sphinx_htmlbook_theme/: theme.conf
sphinx-htmlbook-theme/src/sphinx_htmlbook_theme/theme/sphinx-htmlbook-theme/: genindex.html  layout.html  page.html  theme.conf
sphinx-htmlbook-theme/src/sphinx_htmlbook_theme/theme/sphinx-htmlbook-theme/static/: htmlbook.css
src/: chapter_processing.py  jupyter_book_to_htmlbook.py  toc_processing.py
src/jupyter_book_to_htmlbook/: atlas.py  code_processing.py  figure_processing.py  file_processing.py  helpers.py  reference_processing.py  text_processing.py  toc_processing.py
tests/: test_admonition_processing.py  test_atlas.py  test_bibliography.py  test_chapter_processing.py  test_code_processing.py  test_figure_processing.py  test_file_processing.py  test_footnote_process.py  test_glossary.py  test_helpers.py  test_main.py  test_main_loop.py  test_math_processing.py  test_part_processing.py  test_reference_processing.py  test_text_processing.py  test_toc_processing.py  test_unique_ids.py  test_xref_processing.py
tests/example_book/: _config.yml  _toc.yml  bibliography.md  intro.md  references.bib
tests/example_book/_build/html/: bibliography.html  genindex.html  intro.html  (+3 more)
tests/example_book/notebooks/: ch01.ipynb  ch02.00.ipynb  ch02.01.ipynb  ch02.02.md  code.ipynb  code_py.ipynb  code_r.ipynb  footnotes.ipynb  many_a_levels.ipynb  markup.ipynb  preface.ipynb
tests/example_html/: genindex.html  intro.html  pbcopy  search.html  searchindex.js
tests/example_html/ch02/: notebooks.html  subsection-a.html  subsection-b.html
tests/example_html/error_forcers/: keyerror.html  malformed.html  nosection.html  typeerror.html  valueerror.html
tests/example_html/html/: genindex.html  intro.html  search.html
tests/example_html_numbered/: genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  searchindex.js
tests/example_html_numbered/ch02/: notebooks.html  subsection-a.html  subsection-b.html
tests/example_html_numbered/html/: .buildinfo  objects.inv  searchindex.js
tests/example_json/: atlas.json
tests/example_tocs/: genindex01.html  genindex02.html
(+35 files in other folders)
