[tool.poetry]
name = "jupyter-book-to-htmlbook"
version = "1.0.7"
description = "A script to convert jupyter book html files to htmlbook for consumption in Atlas"
authors = ["delfanbaum"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
typer = "^0.6.1"
jupyter-book = "^0.13.1"
PyYAML = "^6.0"
jupyter-core = "^5.0.0"

[tool.poetry.dev-dependencies]
coverage = "^6.4.3"
pytest = "^7.2.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
jb2htmlbook = "jupyter_book_to_htmlbook.main:main"
jb2atlas = "jupyter_book_to_htmlbook.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
