[tool.poetry]
name = "jupyter-book-to-htmlbook"
version = "1.1.0"
description = "A script to convert jupyter book html files to htmlbook for consumption in Atlas"
authors = ["delfanbaum"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
typer = "^0.7.0"
PyYAML = "^6.0"
jupyter-book = "^0.15.1"

[tool.poetry.scripts]
jb2htmlbook = "jupyter_book_to_htmlbook.main:main"
jb2atlas = "jupyter_book_to_htmlbook.main:main"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
