[project]
name = "jupyter-book-to-htmlbook"
version = "1.1.2"
description = "A script to convert jupyter book html files to htmlbook for consumption in Atlas"
license = "MIT"
authors = [
    {name = "O'Reilly Media"}
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "typer>=0.7.0",
    "PyYAML>=6.0",
    "lxml>=6.0.1",
    "jupyter-book>=1.0.4.post1",
]

[project.scripts]
jb2htmlbook = "jupyter_book_to_htmlbook.main:main"
jb2atlas = "jupyter_book_to_htmlbook.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "sphinx-htmlbook-theme",
]
